2006-05-17 Sandro Santilli <strk@refractions.net>

	* source/geom/IntersectionMatrix.cpp,
	source/headers/geos/geom/IntersectionMatrix.h,
	tests/unit/geom/IntersectionMatrixTest.cpp:
	doxygen comments fixup; port info; const correctness;
	added isCovers() and isCoveredBy() public methods
	and associated tests.

2006-05-05 Sandro Santilli <strk@refractions.net>

	* source/noding/snapround/MCIndexSnapRounder.cpp,
	source/noding/snapround/SimpleSnapRounder.cpp:
	had noding validation failure throw an exception.
	* tests/unit/Makefile.am,
	tests/unit/noding/SegmentStringTest.cpp:
	SegmentString unit test.
	* source/headers/geos/noding/SegmentString.h,
	source/headers/geos/noding/SegmentString.inl,
	source/noding/SegmentNodeList.cpp: SegmentString::getContext()
	dropped, new name is getData() to reflect change in JTS
	* source/headers/geos/geom.h: fixed namespace
	qualification in doxygen page about C++ interface.

2006-05-04 Sandro Santilli <strk@refractions.net>

        * source/geom/GeometryCollection.cpp, source/geom/LineString.cpp,
        source/geom/MultiLineString.cpp, source/geom/MultiPoint.cpp,
        source/geom/MultiPolygon.cpp, source/geom/Point.cpp,
        source/geom/Polygon.cpp, source/headers/geos/geom/Dimension.h,
        source/headers/geos/geom/Geometry.h,
        source/headers/geos/geom/GeometryCollection.h,
        source/headers/geos/geom/LineString.h,
        source/headers/geos/geom/MultiLineString.h,
        source/headers/geos/geom/MultiPoint.h,
        source/headers/geos/geom/MultiPolygon.h,
        source/headers/geos/geom/Point.h,
        source/headers/geos/geom/Polygon.h,
        source/operation/buffer/BufferOp.cpp: updated all
	Geometry::getDimension() methods to return
	Dimension::DimensionType (closes bug#93)
	* source/headers/geos/util/math.h: provided an util::round()
	method being an inline proxy to call appropriate default
	rounding function for the whole GEOS codebase. Currently